--- a/Lab10_Ex04.ipynb
+++ b/Lab10_Ex04.ipynb
@@ -77,9 +77,50 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div class=\"dni-plaintext\"><pre>70</pre></div><style>\r\n",
+       ".dni-code-hint {\r\n",
+       "    font-style: italic;\r\n",
+       "    overflow: hidden;\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview {\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview td {\r\n",
+       "    vertical-align: top;\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "details.dni-treeview {\r\n",
+       "    padding-left: 1em;\r\n",
+       "}\r\n",
+       "table td {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "table tr { \r\n",
+       "    vertical-align: top; \r\n",
+       "    margin: 0em 0px;\r\n",
+       "}\r\n",
+       "table tr td pre \r\n",
+       "{ \r\n",
+       "    vertical-align: top !important; \r\n",
+       "    margin: 0em 0px !important;\r\n",
+       "} \r\n",
+       "table th {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "</style>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "Score sc = new();\n",
+    "Score sc = new Score();\n",
     "sc.Value = 70;\n",
     "sc.Value        // เราสามารถเรียกดูค่าโดยไม่ต้องใช้ Console.WriteLine()  แต่ต้องอยู่บรรทุดสุดท้ายเพียงบรทัดเดียว และต้องไม่ใส่ ; ท้ายคำสั่ง \n"
    ]
@@ -98,10 +139,23 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "System.ArgumentOutOfRangeException: Specified argument was out of the range of valid values. (Parameter 'Score must be between 0 and 100.')\r\n   at Submission#1.Score.set_Value(Int32 value)\r\n   at Submission#6.<<Initialize>>d__0.MoveNext()\r\n--- End of stack trace from previous location ---\r\n   at Microsoft.CodeAnalysis.Scripting.ScriptExecutionState.RunSubmissionsAsync[TResult](ImmutableArray`1 precedingExecutors, Func`2 currentExecutor, StrongBox`1 exceptionHolderOpt, Func`2 catchExceptionOpt, CancellationToken cancellationToken)",
+     "output_type": "error",
+     "traceback": [
+      "System.ArgumentOutOfRangeException: Specified argument was out of the range of valid values. (Parameter 'Score must be between 0 and 100.')\r\n",
+      "   at Submission#1.Score.set_Value(Int32 value)\r\n",
+      "   at Submission#6.<<Initialize>>d__0.MoveNext()\r\n",
+      "--- End of stack trace from previous location ---\r\n",
+      "   at Microsoft.CodeAnalysis.Scripting.ScriptExecutionState.RunSubmissionsAsync[TResult](ImmutableArray`1 precedingExecutors, Func`2 currentExecutor, StrongBox`1 exceptionHolderOpt, Func`2 catchExceptionOpt, CancellationToken cancellationToken)"
+     ]
+    }
+   ],
    "source": [
-    "Score sc = new();\n",
-    "sc.Value = __ใส่ค่าตัวเลขติดลบ__;\n",
+    "Score sc = new Score();\n",
+    "sc.Value = -2;\n",
     "sc.Value         \n"
    ]
   },
@@ -207,10 +261,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "66030284@kmitl.ac.th\r\n"
+     ]
+    }
+   ],
    "source": [
     "Email email = new Email();\n",
-    "email.Address = \"input corect email address\";\n",
+    "email.Address = \"66030284@kmitl.ac.th\";\n",
     "Console.WriteLine(email.Address);"
    ]
   },
@@ -228,9 +290,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "อีเมลที่กำหนดไม่ถูกต้อง\n",
+      "Email Address: \n"
+     ]
+    }
+   ],
    "source": [
-    " // พื้นที่เชียน code (สามารถ copy จากด้านบนมาแก้ไขดัดแปลง หรือพิมพ์ใหม่ทั้งหมดก็ได้)"
+    " // พื้นที่เชียน code (สามารถ copy จากด้านบนมาแก้ไขดัดแปลง หรือพิมพ์ใหม่ทั้งหมดก็ได้)\n",
+    "Email email = new Email();\n",
+    "email.Address = \"66030284kmitlacth\";  \n",
+    "Console.WriteLine(\"Email Address: \" + email.Address);\n"
    ]
   },
   {
@@ -291,10 +365,20 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Sronsawan"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "Name man = new Name();\n",
-    "man.FirstName = \"Donale\";\n",
+    "man.FirstName = \"Sronsawan\";\n",
     "man.FirstName"
    ]
   },
@@ -312,11 +396,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sronsawan \r\n"
+     ]
+    }
+   ],
    "source": [
     "Name man = new Name();\n",
-    "man.FirstName = string.Empty;\n",
-    "man.FirstName"
+    "man.FirstName = string.Empty; \n",
+    "Console.WriteLine(\"Sronsawan \" + man.FirstName); "
    ]
   },
   {
@@ -331,12 +423,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First Name: \r\n"
+     ]
+    }
+   ],
    "source": [
     "Name man = new Name();\n",
-    "man.FirstName = string.Empty;\n",
-    "man.FirstName"
+    "Console.WriteLine(\"First Name: \" + man.FirstName); "
    ]
   }
  ],
