--- a/Lab10_Ex03.ipynb
+++ b/Lab10_Ex03.ipynb
@@ -79,13 +79,21 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gartoon\r\n"
+     ]
+    }
+   ],
    "source": [
     "using static System.Console;\n",
     "\n",
-    "Person p = new();\n",
-    "p.Name = \"_______\";\n",
-    "WriteLine(p._name);  // p._name ได้หรือไม่ ถ้าไม่ได้ แก้ไขให้ถูกต้อง"
+    "Person p = new Person();\n",
+    "p.Name = \"Gartoon\";\n",
+    "WriteLine(p.Name);  // p._name ได้หรือไม่ ถ้าไม่ได้ แก้ไขให้ถูกต้อง"
    ]
   },
   {
@@ -144,7 +152,15 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\r\n"
+     ]
+    }
+   ],
    "source": [
     "Lamp myLamp = new Lamp();\n",
     "\n",
@@ -164,7 +180,15 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\r\n"
+     ]
+    }
+   ],
    "source": [
     "myLamp.IsOn = false; // พยายามปิดไฟ  แต่ไม่มีผล เนื่องจาก property นี้จะรับเฉพาะค่า true เท่านั้น \n",
     "Console.WriteLine(myLamp.IsOn); // Output: True"
@@ -222,9 +246,40 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Product Price: 19\r\n"
+     ]
+    }
+   ],
    "source": [
-    "// พื้นที่เขียน code"
+    "public class Product\n",
+    "{\n",
+    "    private decimal _price;\n",
+    "\n",
+    "    public decimal Price\n",
+    "    {\n",
+    "        get { return _price; }\n",
+    "        set\n",
+    "        {\n",
+    "            // กำหนดเงื่อนไขให้ราคาต้องไม่น้อยกว่า 0\n",
+    "            if (value >= 0)\n",
+    "            {\n",
+    "                _price = value;\n",
+    "            }\n",
+    "            else\n",
+    "            {\n",
+    "                Console.WriteLine(\"ราคาไม่สามารถต่ำกว่า 0\");\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "        Product product = new Product();\n",
+    "        product.Price = 19;\n",
+    "        Console.WriteLine(\"Product Price: \" + product.Price);\n"
    ]
   },
   {
@@ -249,9 +304,42 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ไม่สามารถกำหนดราคาเป็นลบได้\n",
+      "Product Price: 0\n"
+     ]
+    }
+   ],
    "source": [
-    "// พื้นที่เขียน code"
+    "// พื้นที่เขียน code\n",
+    "public class Product\n",
+    "{\n",
+    "    private decimal _price;\n",
+    "\n",
+    "    public decimal Price\n",
+    "    {\n",
+    "        get { return _price; }\n",
+    "        set\n",
+    "        {\n",
+    "            if (value >= 0)\n",
+    "            {\n",
+    "                _price = value;\n",
+    "            }\n",
+    "            else\n",
+    "            {\n",
+    "                // แสดงข้อความเมื่อค่าที่กำหนดเป็นลบ\n",
+    "                Console.WriteLine(\"ไม่สามารถกำหนดราคาเป็นลบได้\");\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "        Product product = new Product();\n",
+    "        product.Price = -19;  \n",
+    "        Console.WriteLine(\"Product Price: \" + product.Price);\n"
    ]
   },
   {
@@ -272,7 +360,16 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5  is odd? : True\n",
+      "5  is even? : False\n"
+     ]
+    }
+   ],
    "source": [
     "public class Countable\n",
     "{\n",
@@ -337,8 +434,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "626234897\n",
+      "1649\n",
+      "33\n"
+     ]
+    }
+   ],
    "source": [
     "Random random = new Random();\n",
     "Console.WriteLine(random.Next());\n",
@@ -357,6 +471,52 @@
     "1. สร้าง object จากคลาส Countable\n",
     "2. ใส่ตัวเลขแบบสุ่ม (จากคลาส Random)\n",
     "3. ให้แสดงว่าตัวเลขนั้นเป็นเลขคี่หรือเลขคู่"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "เลขที่สุ่มได้: 16\n",
+      "เลข 16 เป็นเลขคู่\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Countable\n",
+    "{\n",
+    "    \n",
+    "    public int Number { get; set; }\n",
+    "\n",
+    "    public void CheckEvenOdd()\n",
+    "    {\n",
+    "        if (Number % 2 == 0)\n",
+    "        {\n",
+    "            Console.WriteLine(\"เลข \" + Number + \" เป็นเลขคู่\");\n",
+    "        }\n",
+    "        else\n",
+    "        {\n",
+    "            Console.WriteLine(\"เลข \" + Number + \" เป็นเลขคี่\");\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "    {\n",
+    "        // 1. สร้าง object จากคลาส Countable\n",
+    "        Countable countable = new Countable();\n",
+    "\n",
+    "        // 2. ใส่ตัวเลขแบบสุ่ม (จากคลาส Random)\n",
+    "        Random random = new Random();\n",
+    "        countable.Number = random.Next(1, 101); \n",
+    "\n",
+    "        // 3. แสดงว่าตัวเลขนั้นเป็นเลขคี่หรือเลขคู่\n",
+    "        Console.WriteLine(\"เลขที่สุ่มได้: \" + countable.Number); \n",
+    "        countable.CheckEvenOdd();\n",
+    "    }\n"
    ]
   }
  ],
