--- a/Lab10_Ex03.ipynb
+++ b/Lab10_Ex03.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -81,11 +81,37 @@
    },
    "outputs": [],
    "source": [
-    "using static System.Console;\n",
+    "using System;\n",
     "\n",
-    "Person p = new();\n",
-    "p.Name = \"_______\";\n",
-    "WriteLine(p._name);  // p._name ได้หรือไม่ ถ้าไม่ได้ แก้ไขให้ถูกต้อง"
+    "public class Person\n",
+    "{\n",
+    "    private string _name;\n",
+    "\n",
+    "    public string Name\n",
+    "    {\n",
+    "        get { return _name; }\n",
+    "        set\n",
+    "        {\n",
+    "            Console.WriteLine($\"[Setter] Assigning Name = {value}\");\n",
+    "            _name = value;\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class Program\n",
+    "{\n",
+    "    static void Main()\n",
+    "    {\n",
+    "        // 1. สร้าง object 'p' จากคลาส Person\n",
+    "        Person p = new Person();\n",
+    "\n",
+    "        // 2. กำหนดชื่อให้ 'p' ผ่าน property 'Name'\n",
+    "        p.Name = \"Alice\";\n",
+    "\n",
+    "        // 3. แสดงชื่อของ 'p' โดยเมธอด WriteLine()\n",
+    "        Console.WriteLine($\"[INFO] Person Name: {p.Name}\");\n",
+    "    }\n",
+    "}\n"
    ]
   },
   {
@@ -97,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -135,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -144,7 +170,15 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\r\n"
+     ]
+    }
+   ],
    "source": [
     "Lamp myLamp = new Lamp();\n",
     "\n",
@@ -155,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -164,7 +198,15 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\r\n"
+     ]
+    }
+   ],
    "source": [
     "myLamp.IsOn = false; // พยายามปิดไฟ  แต่ไม่มีผล เนื่องจาก property นี้จะรับเฉพาะค่า true เท่านั้น \n",
     "Console.WriteLine(myLamp.IsOn); // Output: True"
@@ -213,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -224,7 +266,45 @@
    },
    "outputs": [],
    "source": [
-    "// พื้นที่เขียน code"
+    "using System;\n",
+    "\n",
+    "public class Product\n",
+    "{\n",
+    "    private double _price;\n",
+    "\n",
+    "    public double Price\n",
+    "    {\n",
+    "        get { return _price; }\n",
+    "        set\n",
+    "        {\n",
+    "            if (value < 0)\n",
+    "            {\n",
+    "                Console.WriteLine(\"[Setter] Error: Price cannot be negative. Setting price to 0.\");\n",
+    "                _price = 0;  // ตั้งค่าเป็น 0 ถ้าค่าที่รับเข้ามาน้อยกว่า 0\n",
+    "            }\n",
+    "            else\n",
+    "            {\n",
+    "                Console.WriteLine($\"[Setter] Assigning Price = {value}\");\n",
+    "                _price = value;\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class Program\n",
+    "{\n",
+    "    static void Main()\n",
+    "    {\n",
+    "        // 1. สร้าง object จากคลาส Product\n",
+    "        Product product = new Product();\n",
+    "\n",
+    "        // 2. กำหนดค่าให้กับ Product.Price โดยให้ค่าไม่น้อยกว่า 0\n",
+    "        product.Price = -10; // ลองใส่ค่าติดลบ จะถูกตั้งเป็น 0 อัตโนมัติ\n",
+    "\n",
+    "        // 3. แสดง Product.Price โดยเมธอด WriteLine()\n",
+    "        Console.WriteLine($\"[INFO] Product Price: {product.Price}\");\n",
+    "    }\n",
+    "}\n"
    ]
   },
   {
@@ -240,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -251,7 +331,45 @@
    },
    "outputs": [],
    "source": [
-    "// พื้นที่เขียน code"
+    "using System;\n",
+    "\n",
+    "public class Product\n",
+    "{\n",
+    "    private double _price;\n",
+    "\n",
+    "    public double Price\n",
+    "    {\n",
+    "        get { return _price; }\n",
+    "        set\n",
+    "        {\n",
+    "            if (value < 0)\n",
+    "            {\n",
+    "                Console.WriteLine(\"[Setter] Error: Price cannot be negative. Setting price to 0.\");\n",
+    "                _price = 0;  // ป้องกันค่าติดลบ\n",
+    "            }\n",
+    "            else\n",
+    "            {\n",
+    "                Console.WriteLine($\"[Setter] Assigning Price = {value}\");\n",
+    "                _price = value;\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class Program\n",
+    "{\n",
+    "    static void Main()\n",
+    "    {\n",
+    "        // 1. สร้าง object จากคลาส Product\n",
+    "        Product product = new Product();\n",
+    "\n",
+    "        // 2. กำหนดค่าให้กับ Product.Price โดยให้ค่าเป็นลบ\n",
+    "        product.Price = -20; // ทดสอบกำหนดค่าลบ\n",
+    "\n",
+    "        // 3. แสดง Product.Price โดยเมธอด WriteLine()\n",
+    "        Console.WriteLine($\"[INFO] Product Price: {product.Price}\");\n",
+    "    }\n",
+    "}\n"
    ]
   },
   {
@@ -263,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -272,7 +390,16 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5  is odd? : True\n",
+      "5  is even? : False\n"
+     ]
+    }
+   ],
    "source": [
     "public class Countable\n",
     "{\n",
@@ -336,9 +463,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1247244849\n",
+      "1025\n",
+      "55\n"
+     ]
+    }
+   ],
    "source": [
     "Random random = new Random();\n",
     "Console.WriteLine(random.Next());\n",
@@ -357,6 +498,104 @@
     "1. สร้าง object จากคลาส Countable\n",
     "2. ใส่ตัวเลขแบบสุ่ม (จากคลาส Random)\n",
     "3. ให้แสดงว่าตัวเลขนั้นเป็นเลขคี่หรือเลขคู่"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "using System;\n",
+    "\n",
+    "public class Countable\n",
+    "{\n",
+    "    public int Number { get; set; }  // Property สำหรับเก็บตัวเลข\n",
+    "\n",
+    "    // เมธอดตรวจสอบว่าเป็นเลขคู่หรือคี่\n",
+    "    public void CheckEvenOrOdd()\n",
+    "    {\n",
+    "        if (Number % 2 == 0)\n",
+    "        {\n",
+    "            Console.WriteLine($\"[INFO] {Number} is Even.\");\n",
+    "        }\n",
+    "        else\n",
+    "        {\n",
+    "            Console.WriteLine($\"[INFO] {Number} is Odd.\");\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class Program\n",
+    "{\n",
+    "    static void Main()\n",
+    "    {\n",
+    "        Random random = new Random();\n",
+    "\n",
+    "        // 1. สร้าง object จากคลาส Countable\n",
+    "        Countable countable = new Countable();\n",
+    "\n",
+    "        // 2. ใส่ตัวเลขแบบสุ่ม (จากคลาส Random)\n",
+    "        countable.Number = random.Next(1000); // สุ่มตัวเลขระหว่าง 0-999\n",
+    "\n",
+    "        // 3. ให้แสดงว่าตัวเลขนั้นเป็นเลขคี่หรือเลขคู่\n",
+    "        Console.WriteLine($\"Generated Number: {countable.Number}\");\n",
+    "        countable.CheckEvenOrOdd();\n",
+    "    }\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "using System;\n",
+    "\n",
+    "public class Countable\n",
+    "{\n",
+    "    public int Number { get; set; }  // Property สำหรับเก็บตัวเลข\n",
+    "\n",
+    "    // เมธอดตรวจสอบว่าเป็นเลขคู่หรือคี่\n",
+    "    public void CheckEvenOrOdd()\n",
+    "    {\n",
+    "        if (Number % 2 == 0)\n",
+    "        {\n",
+    "            Console.WriteLine($\"[INFO] {Number} is Even.\");\n",
+    "        }\n",
+    "        else\n",
+    "        {\n",
+    "            Console.WriteLine($\"[INFO] {Number} is Odd.\");\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class Program\n",
+    "{\n",
+    "    static void Main()\n",
+    "    {\n",
+    "        Random random = new Random();\n",
+    "\n",
+    "        // 1. สร้าง object จากคลาส Countable\n",
+    "        Countable countable = new Countable();\n",
+    "\n",
+    "        // 2. ใส่ตัวเลขแบบสุ่ม (จากคลาส Random)\n",
+    "        countable.Number = random.Next(1000); // สุ่มตัวเลขระหว่าง 0-999\n",
+    "\n",
+    "        // 3. ให้แสดงว่าตัวเลขนั้นเป็นเลขคี่หรือเลขคู่\n",
+    "        Console.WriteLine($\"Generated Number: {countable.Number}\");\n",
+    "        countable.CheckEvenOrOdd();\n",
+    "    }\n",
+    "}\n"
    ]
   }
  ],
