--- a/Lab10_Ex04.ipynb
+++ b/Lab10_Ex04.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -79,9 +79,44 @@
    },
    "outputs": [],
    "source": [
-    "Score sc = new();\n",
-    "sc.Value = 70;\n",
-    "sc.Value        // เราสามารถเรียกดูค่าโดยไม่ต้องใช้ Console.WriteLine()  แต่ต้องอยู่บรรทุดสุดท้ายเพียงบรทัดเดียว และต้องไม่ใส่ ; ท้ายคำสั่ง \n"
+    "using System;\n",
+    "\n",
+    "public class Score\n",
+    "{\n",
+    "    private int _points;\n",
+    "\n",
+    "    public int Points\n",
+    "    {\n",
+    "        get { return _points; }\n",
+    "        set\n",
+    "        {\n",
+    "            if (value < 0 || value > 100) // กำหนดช่วงคะแนนให้อยู่ระหว่าง 0-100\n",
+    "            {\n",
+    "                Console.WriteLine(\"[Setter] Error: Score must be between 0 and 100.\");\n",
+    "            }\n",
+    "            else\n",
+    "            {\n",
+    "                Console.WriteLine($\"[Setter] Assigning Score = {value}\");\n",
+    "                _points = value;\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class Program\n",
+    "{\n",
+    "    static void Main()\n",
+    "    {\n",
+    "        // 1. สร้าง object จากคลาส Score\n",
+    "        Score studentScore = new Score();\n",
+    "\n",
+    "        // 2. กำหนดคะแนนในช่วงปกติ\n",
+    "        studentScore.Points = 85; // ทดสอบกำหนดค่าในช่วงปกติ\n",
+    "\n",
+    "        // 3. แสดงคะแนนที่เก็บใน object\n",
+    "        Console.WriteLine($\"[INFO] Student Score: {studentScore.Points}\");\n",
+    "    }\n",
+    "}\n"
    ]
   },
   {
@@ -96,13 +131,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
-    "Score sc = new();\n",
-    "sc.Value = __ใส่ค่าตัวเลขติดลบ__;\n",
-    "sc.Value         \n"
+    "using System;\n",
+    "\n",
+    "public class Score\n",
+    "{\n",
+    "    private int _points;\n",
+    "\n",
+    "    public int Points\n",
+    "    {\n",
+    "        get { return _points; }\n",
+    "        set\n",
+    "        {\n",
+    "            if (value < 0 || value > 100) // ป้องกันค่าที่ไม่อยู่ในช่วง 0-100\n",
+    "            {\n",
+    "                Console.WriteLine(\"[Setter] Error: Score must be between 0 and 100. Setting score to 0.\");\n",
+    "                _points = 0; // ตั้งค่าเป็น 0 หากค่าที่รับเข้ามาไม่ถูกต้อง\n",
+    "            }\n",
+    "            else\n",
+    "            {\n",
+    "                Console.WriteLine($\"[Setter] Assigning Score = {value}\");\n",
+    "                _points = value;\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class Program\n",
+    "{\n",
+    "    static void Main()\n",
+    "    {\n",
+    "        // 1. สร้าง object จากคลาส Score\n",
+    "        Score studentScore = new Score();\n",
+    "\n",
+    "        // 2. กำหนดคะแนนผิดปกติ (เป็นค่าลบ)\n",
+    "        studentScore.Points = -10; // กำหนดค่าลบเพื่อทดสอบระบบตรวจสอบ\n",
+    "\n",
+    "        // 3. แสดงคะแนนที่เก็บใน object\n",
+    "        Console.WriteLine($\"[INFO] Student Score: {studentScore.Points}\");\n",
+    "    }\n",
+    "}\n",
+    " \n"
    ]
   },
   {
@@ -152,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -205,13 +281,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
-    "Email email = new Email();\n",
-    "email.Address = \"input corect email address\";\n",
-    "Console.WriteLine(email.Address);"
+    "using System;\n",
+    "using System.Text.RegularExpressions;\n",
+    "\n",
+    "public class Email\n",
+    "{\n",
+    "    private string _emailAddress;\n",
+    "\n",
+    "    public string EmailAddress\n",
+    "    {\n",
+    "        get { return _emailAddress; }\n",
+    "        set\n",
+    "        {\n",
+    "            if (IsValidEmail(value))\n",
+    "            {\n",
+    "                Console.WriteLine($\"[Setter] Assigning Email = {value}\");\n",
+    "                _emailAddress = value;\n",
+    "            }\n",
+    "            else\n",
+    "            {\n",
+    "                Console.WriteLine(\"[Setter] Error: Invalid email format.\");\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    // เมธอดตรวจสอบรูปแบบอีเมล\n",
+    "    private bool IsValidEmail(string email)\n",
+    "    {\n",
+    "        string pattern = @\"^[^@\\s]+@[^@\\s]+\\.[^@\\s]+$\"; // Regex ตรวจสอบอีเมล\n",
+    "        return Regex.IsMatch(email, pattern);\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class Program\n",
+    "{\n",
+    "    static void Main()\n",
+    "    {\n",
+    "        // 1. สร้าง object จากคลาส Email\n",
+    "        Email myEmail = new Email();\n",
+    "\n",
+    "        // 2. กำหนด Email ที่ถูกต้อง\n",
+    "        myEmail.EmailAddress = \"example@email.com\"; // ทดสอบกำหนดค่าอีเมลที่ถูกต้อง\n",
+    "\n",
+    "        // 3. แสดง email address ที่เก็บใน object\n",
+    "        Console.WriteLine($\"[INFO] Stored Email: {myEmail.EmailAddress}\");\n",
+    "    }\n",
+    "}\n"
    ]
   },
   {
@@ -226,11 +349,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
-    " // พื้นที่เชียน code (สามารถ copy จากด้านบนมาแก้ไขดัดแปลง หรือพิมพ์ใหม่ทั้งหมดก็ได้)"
+    "using System;\n",
+    "using System.Text.RegularExpressions;\n",
+    "\n",
+    "public class Email\n",
+    "{\n",
+    "    private string _emailAddress;\n",
+    "\n",
+    "    public string EmailAddress\n",
+    "    {\n",
+    "        get { return _emailAddress; }\n",
+    "        set\n",
+    "        {\n",
+    "            if (IsValidEmail(value))\n",
+    "            {\n",
+    "                Console.WriteLine($\"[Setter] Assigning Email = {value}\");\n",
+    "                _emailAddress = value;\n",
+    "            }\n",
+    "            else\n",
+    "            {\n",
+    "                Console.WriteLine(\"[Setter] Error: Invalid email format.\");\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    // เมธอดตรวจสอบรูปแบบอีเมล\n",
+    "    private bool IsValidEmail(string email)\n",
+    "    {\n",
+    "        string pattern = @\"^[^@\\s]+@[^@\\s]+\\.[^@\\s]+$\"; // Regex ตรวจสอบอีเมล\n",
+    "        return Regex.IsMatch(email, pattern);\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class Program\n",
+    "{\n",
+    "    static void Main()\n",
+    "    {\n",
+    "        // 1. สร้าง object จากคลาส Email\n",
+    "        Email myEmail = new Email();\n",
+    "\n",
+    "        // 2. กำหนด Email ที่ไม่ถูกต้อง\n",
+    "        myEmail.EmailAddress = \"invalid-email\"; // กำหนดอีเมลที่ไม่ถูกต้อง\n",
+    "\n",
+    "        // 3. แสดง email address ที่เก็บใน object\n",
+    "        Console.WriteLine($\"[INFO] Stored Email: {myEmail.EmailAddress}\");\n",
+    "    }\n",
+    "}\n"
    ]
   },
   {
@@ -242,8 +414,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "public class Name\n",
@@ -282,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -293,9 +469,27 @@
    },
    "outputs": [],
    "source": [
-    "Name man = new Name();\n",
-    "man.FirstName = \"Donale\";\n",
-    "man.FirstName"
+    "using System;\n",
+    "\n",
+    "public class Name\n",
+    "{\n",
+    "    public string FirstName { get; set; }\n",
+    "}\n",
+    "\n",
+    "class Program\n",
+    "{\n",
+    "    static void Main()\n",
+    "    {\n",
+    "        // 1. สร้าง object จากคลาส Name\n",
+    "        Name person = new Name();\n",
+    "\n",
+    "        // 2. กำหนดชื่อที่ถูกต้องให้กับ object.FirstName\n",
+    "        person.FirstName = \"John\"; // กำหนดชื่อที่ถูกต้อง\n",
+    "\n",
+    "        // 3. แสดง object.FirstName\n",
+    "        Console.WriteLine($\"[INFO] First Name: {person.FirstName}\");\n",
+    "    }\n",
+    "}\n"
    ]
   },
   {
@@ -310,13 +504,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
-    "Name man = new Name();\n",
-    "man.FirstName = string.Empty;\n",
-    "man.FirstName"
+    "using System;\n",
+    "\n",
+    "public class Name\n",
+    "{\n",
+    "    public string FirstName { get; set; }\n",
+    "}\n",
+    "\n",
+    "class Program\n",
+    "{\n",
+    "    static void Main()\n",
+    "    {\n",
+    "        // 1. สร้าง object จากคลาส Name\n",
+    "        Name person = new Name();\n",
+    "\n",
+    "        // 2. กำหนด object.FirstName เป็น string.Empty\n",
+    "        person.FirstName = string.Empty; // กำหนดให้ FirstName เป็นค่า Empty (ไม่มีค่า)\n",
+    "\n",
+    "        // 3. แสดง object.FirstName\n",
+    "        Console.WriteLine($\"[INFO] First Name: '{person.FirstName}'\");\n",
+    "    }\n",
+    "}\n"
    ]
   },
   {
@@ -330,13 +546,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
-    "Name man = new Name();\n",
-    "man.FirstName = string.Empty;\n",
-    "man.FirstName"
+    "using System;\n",
+    "\n",
+    "public class Name\n",
+    "{\n",
+    "    public string FirstName { get; set; }  // Property สำหรับเก็บชื่อ\n",
+    "}\n",
+    "\n",
+    "class Program\n",
+    "{\n",
+    "    static void Main()\n",
+    "    {\n",
+    "        // 1. สร้าง object จากคลาส Name\n",
+    "        Name person = new Name();\n",
+    "\n",
+    "        // 2. แสดง object.FirstName โดยไม่ต้องกำหนดค่าใดๆ ให้ FirstName\n",
+    "        Console.WriteLine($\"[INFO] First Name: '{person.FirstName}'\");\n",
+    "    }\n",
+    "}\n"
    ]
   }
  ],
