--- a/Lab10_Ex02.ipynb
+++ b/Lab10_Ex02.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -69,7 +69,15 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Object Oriented Programming\r\n"
+     ]
+    }
+   ],
    "source": [
     "using static System.Console;    // ใช้บรรทัดนี้ เพื่อไม่ต้องเขียน Console.WriteLine() เขียนแค่ WriteLine() ก็พอ \n",
     "\n",
@@ -89,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -100,26 +108,38 @@
    },
    "outputs": [],
    "source": [
-    "public class Book  // ต้องสร้างคลาส เนื่องจาก property ต้องอยู่ภายในคลาสเท่านั้น\n",
-    "{\n",
-    "     \n",
-    "    // auto property ไม่ต้องการ field \n",
+    "using System;\n",
     "\n",
-    "    public string Title    // property ทำหน้าที่เปิดเผย (รับ-ส่ง) ข้อมูลระหว่าง ภายในคลาส - โลกภายนอก\n",
+    "public class Book\n",
+    "{\n",
+    "    private string _title;  // ต้องมี Field เพื่อใช้กับ getter และ setter\n",
+    "\n",
+    "    public string Title\n",
     "    {\n",
-    "        get \n",
+    "        get\n",
     "        {\n",
-    "            WriteLine($\"[Getter] Value in the field '_title' = {_title}\"); // คอมไพเลอร์จะสร้าง '_title' ให้เองหรือไม่???\n",
-    "            return _title;  \n",
+    "            Console.WriteLine($\"[Getter] Value in the field '_title' = {_title}\");\n",
+    "            return _title;\n",
     "        }\n",
-    "        set \n",
-    "        { \n",
-    "            WriteLine($\"[Setter] Value in the 'value' = {value}\");\n",
-    "            _title = value; \n",
-    "            WriteLine($\"[Setter]Value in the field '_title' = {_title}\");\n",
+    "        set\n",
+    "        {\n",
+    "            Console.WriteLine($\"[Setter] Value in the 'value' = {value}\");\n",
+    "            _title = value;\n",
+    "            Console.WriteLine($\"[Setter] Value in the field '_title' = {_title}\");\n",
     "        }\n",
     "    }\n",
-    "}"
+    "}\n",
+    "\n",
+    "// ทดสอบการทำงาน\n",
+    "class Program\n",
+    "{\n",
+    "    static void Main()\n",
+    "    {\n",
+    "        Book book = new Book();\n",
+    "        book.Title = \"C# Programming\";  // เรียกใช้ setter\n",
+    "        string title = book.Title;      // เรียกใช้ getter\n",
+    "    }\n",
+    "}\n"
    ]
   },
   {
@@ -133,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -158,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -181,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -223,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -232,7 +252,17 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "(1,20): error CS0246: The type or namespace name '_________' could not be found (are you missing a using directive or an assembly reference?)\r\n(3,11): error CS0103: The name '____' does not exist in the current context",
+     "output_type": "error",
+     "traceback": [
+      "(1,20): error CS0246: The type or namespace name '_________' could not be found (are you missing a using directive or an assembly reference?)\r\n",
+      "(3,11): error CS0103: The name '____' does not exist in the current context"
+     ]
+    }
+   ],
    "source": [
     "Student stu  = new _________();\n",
     "stu.Name = \"________\";\n",
@@ -252,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -263,10 +293,59 @@
    },
    "outputs": [],
    "source": [
-    "Student stu  = new _________();\n",
-    "stu.Name = \"________\";\n",
-    "stu.Age = ____;\n",
-    "WriteLine($\"Name = {stu.Name}, Age = {stu.Age}\");"
+    "using System;\n",
+    "\n",
+    "public class Student\n",
+    "{\n",
+    "    private string _name;\n",
+    "    private int _age;\n",
+    "\n",
+    "    public string Name\n",
+    "    {\n",
+    "        get { return _name; }\n",
+    "        set\n",
+    "        {\n",
+    "            Console.WriteLine($\"[Setter] Assigning Name = {value}\");\n",
+    "            _name = value;\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    public int Age\n",
+    "    {\n",
+    "        get { return _age; }\n",
+    "        set\n",
+    "        {\n",
+    "            if (value < 0)\n",
+    "            {\n",
+    "                Console.WriteLine(\"[Setter] Error: Age cannot be negative. Setting age to 0.\");\n",
+    "                _age = 0; // ตั้งค่าเป็น 0 ถ้า input เป็นค่าลบ\n",
+    "            }\n",
+    "            else\n",
+    "            {\n",
+    "                Console.WriteLine($\"[Setter] Assigning Age = {value}\");\n",
+    "                _age = value;\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class Program\n",
+    "{\n",
+    "    static void Main()\n",
+    "    {\n",
+    "        // 1. สร้าง object 'stu1' จากคลาส Student\n",
+    "        Student stu1 = new Student();\n",
+    "\n",
+    "        // 2. กำหนดชื่อให้ 'stu1' ผ่าน property 'Name'\n",
+    "        stu1.Name = \"John Doe\";\n",
+    "\n",
+    "        // 3. กำหนดอายุให้ 'stu1' ผ่าน property 'Age' โดยให้เป็นค่าลบ\n",
+    "        stu1.Age = -5;  // ระบบจะแสดงข้อความเตือน และตั้งค่าเป็น 0\n",
+    "\n",
+    "        // แสดงค่าปัจจุบันของ stu1\n",
+    "        Console.WriteLine($\"[INFO] Student Name: {stu1.Name}, Age: {stu1.Age}\");\n",
+    "    }\n",
+    "}\n"
    ]
   },
   {
